--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
                 <div class="logo">SHARRC</div>
                 <div class="main-navigation">
                     <ul class="nav-items">
+                        <!-- Nav items will be drop down lists NEED TO LEARN THAT -->
                         <li>About</li>
                         <!-- About section will contain  the people involved in the cluster and the publications-->
                         <li>Projects</li>
@@ -28,6 +29,13 @@
             </div>
         </nav>
     </header>
+    <div class="hero">
+        <div class="hero-header">Sports, Health, and Rehabilitation Research Center</div>
+        <div class="hero-content">Providing sports engineering and rehabilitation 
+            technology solutions for diverse problems that arise in the community 
+            to help individuals or research groups.
+        </div>
+    </div>
     
 </body>
 </html>
