--- a/index.html
+++ b/index.html
@@ -29,13 +29,123 @@
             </div>
         </nav>
     </header>
+
     <div class="hero">
-        <div class="hero-header">Sports, Health, and Rehabilitation Research Center</div>
-        <div class="hero-content">Providing sports engineering and rehabilitation 
-            technology solutions for diverse problems that arise in the community 
-            to help individuals or research groups.
+        <div class="hero-conent-wrapper">
+            <div class="hero-header">Sports, Health, and Rehabilitation Research Center</div>
+            <div class="hero-content">
+                Providing research and services for the health and wellbeing of the community
+            </div>
         </div>
     </div>
+
+    <div class="content-wrapper">
+        <section class="odd-section">
+            <div class="odd-section-header">
+                <div class="odd-section-title">Learn how SHARRC camn help accelerate your research</div>
+                <div class="odd-section-subtitle">Providing sports engineering and rehabilitation 
+                    technology solutions for diverse problems that arise in the community 
+                    to help individuals or research groups.
+                </div>
+            </div>
+            <div class="odd-section-content">
+                <div class="section-links">
+                    <div class="section-link">
+                        <div class="link-logo">
+                            here is a logo
+                        </div>
+                        <div class="link description">
+                            This is the description for the link
+                        </div>
+                    </div>
+                    <div class="section-link">
+                        <div class="link-logo">
+                            here is a logo
+                        </div>
+                        <div class="link description">
+                            This is the description for the link
+                        </div>
+                    </div>
+                    <div class="section-link">
+                        <div class="link-logo">
+                            here is a logo
+                        </div>
+                        <div class="link description">
+                            This is the description for the link
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+
+        <section class="even-section">
+            <div class="even-section-content">
+                <div class="even-section-text">Upcoming events - a description of upcoming events and stuff, kind of like a slideshow with fancy pics or something
+                    This section is really just here to break upo the two sections with more worthwile info.
+                </div>
+                <div class="even-section-link">This will be a button with "Find out more" on it</div>
+            </div>
+        </section>
+
+
+        <section class="odd-section">
+            <div class="odd-section-header">
+                <div class="odd-section-title">Learn how SHARRC camn help accelerate your research</div>
+                <div class="odd-section-subtitle">Providing sports engineering and rehabilitation 
+                    technology solutions for diverse problems that arise in the community 
+                    to help individuals or research groups.
+                </div>
+            </div>
+            <div class="odd-section-content">
+                <div class="section-links">
+                    <div class="section-link">
+                        <div class="link-logo">
+                            here is a logo
+                        </div>
+                        <div class="link description">
+                            This is the description for the link
+                        </div>
+                    </div>
+                    <div class="section-link">
+                        <div class="link-logo">
+                            here is a logo
+                        </div>
+                        <div class="link description">
+                            This is the description for the link
+                        </div>
+                    </div>
+                    <div class="section-link">
+                        <div class="link-logo">
+                            here is a logo
+                        </div>
+                        <div class="link description">
+                            This is the description for the link
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </div>
+
+    <footer class="footer">
+        <div class="footer-content"></div>
+        <div class="footer-nav-bar">
+            <ul class="nav-items">
+                <!-- Nav items will be drop down lists NEED TO LEARN THAT -->
+                <li>About</li>
+                <!-- About section will contain  the people involved in the cluster and the publications-->
+                <li>Projects</li>
+                <!-- Project will contain the specific projects and some info about each one -->
+                <li>Resources</li> 
+                <!-- Resources will contain the facilities that are available and any open access/publically available data and useable resources -->
+                <li>Funding bodies</li>
+                <!-- Small info about each funding partner, what they fund, and what they do. -->
+                <li>Contact</li>
+                <!-- Contact info for natalia, nick, etc. -->
+            </ul>
+        </div>
+    </footer>
     
 </body>
 </html>
