--- a/index.html
+++ b/index.html
@@ -129,7 +129,21 @@
     </div>
 
     <footer class="footer">
-        <div class="footer-content"></div>
+        <div class="footer-content">
+            <div class="socials">
+                <div class="socials-header">Connect with us</div>
+                <div class="socials-links">
+                    <ul class="socials-hyperlinks">
+                        <li>Email</li>
+                        <li>Linkedin</li>
+                    </ul>
+                </div>
+            </div>
+            <div class="footer-statement">
+                This could be any kind of statement, it might be about fundign, or some other inspirational thing.
+                Who knows! the world is your oyster with this one.
+            </div>
+        </div>
         <div class="footer-nav-bar">
             <ul class="nav-items">
                 <!-- Nav items will be drop down lists NEED TO LEARN THAT -->
