Placeholder layout for landing page and basic css

--- a/index.html
+++ b/index.html
@@ -9,30 +9,24 @@
 </head>
 <body>
     <header class="header">
-        <nav class="nav-bar">
-            <div class="container">
-                <div class="logo">SHARRC</div>
-                <div class="main-navigation">
-                    <ul class="nav-items">
-                        <!-- Nav items will be drop down lists NEED TO LEARN THAT -->
-                        <li>About</li>
-                        <!-- About section will contain  the people involved in the cluster and the publications-->
-                        <li>Projects</li>
-                        <!-- Project will contain the specific projects and some info about each one -->
-                        <li>Resources</li> 
-                        <!-- Resources will contain the facilities that are available and any open access/publically available data and useable resources -->
-                        <li>Funding bodies</li>
-                        <!-- Small info about each funding partner, what they fund, and what they do. -->
-                        <li>Contact</li>
-                        <!-- Contact info for natalia, nick, etc. -->
-                    </ul>
-                </div>
-            </div>
-        </nav>
+        <div class="logo">SHARRC</div>
+            <ul class="nav-items">
+                <!-- Nav items will be drop down lists NEED TO LEARN THAT -->
+                <li>About</li>
+                <!-- About section will contain  the people involved in the cluster and the publications-->
+                <li>Projects</li>
+                <!-- Project will contain the specific projects and some info about each one -->
+                <li>Resources</li> 
+                <!-- Resources will contain the facilities that are available and any open access/publically available data and useable resources -->
+                <li>Funding</li>
+                <!-- Small info about each funding partner, what they fund, and what they do. -->
+                <li>Contact</li>
+                <!-- Contact info for natalia, nick, etc. -->
+            </ul>
     </header>
 
     <div class="hero">
-        <div class="hero-conent-wrapper">
+        <div class="hero-content-wrapper">
             <div class="hero-header">Sports, Health, and Rehabilitation Research Center</div>
             <div class="hero-content">
                 Providing research and services for the health and wellbeing of the community
@@ -43,7 +37,7 @@
     <div class="content-wrapper">
         <section class="odd-section">
             <div class="odd-section-header">
-                <div class="odd-section-title">Learn how SHARRC camn help accelerate your research</div>
+                <div class="odd-section-title">Title saying that we can help other people learn and do things</div>
                 <div class="odd-section-subtitle">Providing sports engineering and rehabilitation 
                     technology solutions for diverse problems that arise in the community 
                     to help individuals or research groups.
@@ -92,10 +86,9 @@
 
         <section class="odd-section">
             <div class="odd-section-header">
-                <div class="odd-section-title">Learn how SHARRC camn help accelerate your research</div>
-                <div class="odd-section-subtitle">Providing sports engineering and rehabilitation 
-                    technology solutions for diverse problems that arise in the community 
-                    to help individuals or research groups.
+                <div class="odd-section-title">Something about meeting the people that are part of the team</div>
+                <div class="odd-section-subtitle">Something inspirational and jazzy about the people involved, may some photos and basic things about where they are
+                    and what theyre associations are and maybe something about the university of canterbury?
                 </div>
             </div>
             <div class="odd-section-content">
