Basic styling layout of text

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
     <div class="hero">
         <div class="hero-content-wrapper">
-            <div class="hero-header">Sports, Health, and Rehabilitation Research Center</div>
+            <div class="hero-header">Sport, Health, and Rehabilitation Research Center</div>
             <div class="hero-content">
                 Providing research and services for the health and wellbeing of the community
             </div>
@@ -38,7 +38,8 @@
         <section class="odd-section">
             <div class="odd-section-header">
                 <div class="odd-section-title">Title saying that we can help other people learn and do things</div>
-                <div class="odd-section-subtitle">Providing sports engineering and rehabilitation 
+                <div class="odd-section-subtitle">
+                    Providing sports engineering and rehabilitation 
                     technology solutions for diverse problems that arise in the community 
                     to help individuals or research groups.
                 </div>
