Capitalised nav bar. Formatted font size

--- a/index.html
+++ b/index.html
@@ -12,15 +12,15 @@
         <div class="logo">SHARRC</div>
             <ul class="nav-items">
                 <!-- Nav items will be drop down lists NEED TO LEARN THAT -->
-                <li>About</li>
+                <li>ABOUT</li>
                 <!-- About section will contain  the people involved in the cluster and the publications-->
-                <li>Projects</li>
+                <li>PROJECTS</li>
                 <!-- Project will contain the specific projects and some info about each one -->
-                <li>Resources</li> 
+                <li>RESOURCES</li> 
                 <!-- Resources will contain the facilities that are available and any open access/publically available data and useable resources -->
-                <li>Funding</li>
+                <li>FUNDING</li>
                 <!-- Small info about each funding partner, what they fund, and what they do. -->
-                <li>Contact</li>
+                <li>CONTACT</li>
                 <!-- Contact info for natalia, nick, etc. -->
             </ul>
     </header>
