Added place holder images folder and to top section

--- a/index.html
+++ b/index.html
@@ -8,28 +8,30 @@
     <title>SHARRC</title>
 </head>
 <body>
-    <header class="header">
-        <div class="logo">SHARRC</div>
-            <ul class="nav-items">
-                <!-- Nav items will be drop down lists NEED TO LEARN THAT -->
-                <li>ABOUT</li>
-                <!-- About section will contain  the people involved in the cluster and the publications-->
-                <li>PROJECTS</li>
-                <!-- Project will contain the specific projects and some info about each one -->
-                <li>RESOURCES</li> 
-                <!-- Resources will contain the facilities that are available and any open access/publically available data and useable resources -->
-                <li>FUNDING</li>
-                <!-- Small info about each funding partner, what they fund, and what they do. -->
-                <li>CONTACT</li>
-                <!-- Contact info for natalia, nick, etc. -->
-            </ul>
-    </header>
+    <div class="top-content">
+        <header class="header">
+            <div class="logo">SHARRC</div>
+                <ul class="nav-items">
+                    <!-- Nav items will be drop down lists NEED TO LEARN THAT -->
+                    <li>ABOUT</li>
+                    <!-- About section will contain  the people involved in the cluster and the publications-->
+                    <li>PROJECTS</li>
+                    <!-- Project will contain the specific projects and some info about each one -->
+                    <li>RESOURCES</li> 
+                    <!-- Resources will contain the facilities that are available and any open access/publically available data and useable resources -->
+                    <li>FUNDING</li>
+                    <!-- Small info about each funding partner, what they fund, and what they do. -->
+                    <li>CONTACT</li>
+                    <!-- Contact info for natalia, nick, etc. -->
+                </ul>
+        </header>
 
-    <div class="hero">
-        <div class="hero-content-wrapper">
-            <div class="hero-header">Sport, Health, and Rehabilitation Research Center</div>
-            <div class="hero-content">
-                Providing research and services for the health and wellbeing of the community
+        <div class="hero">
+            <div class="hero-content-wrapper">
+                <div class="hero-header">Sport, Health, and Rehabilitation Research Center</div>
+                <div class="hero-content">
+                    Providing research and services for the health and wellbeing of the community
+                </div>
             </div>
         </div>
     </div>
