Added icon library and place holder icons

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <script src="https://kit.fontawesome.com/6fb872766b.js" crossorigin="anonymous"></script>
     <title>SHARRC</title>
 </head>
 <body>
@@ -28,7 +29,7 @@
 
         <div class="hero">
             <div class="hero-content-wrapper">
-                <div class="hero-header">Sport, Health, and Rehabilitation Research Center</div>
+                <h1 class="hero-header">Sport, Health, and Rehabilitation Research Center</h1>
                 <div class="hero-content">
                     Providing research and services for the health and wellbeing of the community
                 </div>
@@ -49,6 +50,7 @@
             <div class="odd-section-content">
                 <div class="section-links">
                     <div class="section-link">
+                        <i class="fa-solid fa-user"></i>
                         <div class="link-logo">
                             here is a logo
                         </div>
@@ -57,6 +59,7 @@
                         </div>
                     </div>
                     <div class="section-link">
+                        <i class="fa-solid fa-user"></i>
                         <div class="link-logo">
                             here is a logo
                         </div>
@@ -65,6 +68,7 @@
                         </div>
                     </div>
                     <div class="section-link">
+                        <i class="fa-solid fa-user"></i>
                         <div class="link-logo">
                             here is a logo
                         </div>
