Added buttons in first content section

--- a/index.html
+++ b/index.html
@@ -51,30 +51,30 @@
                 <div class="section-links">
                     <div class="section-link">
                         <i class="fa-solid fa-user"></i>
-                        <div class="link-logo">
-                            here is a logo
-                        </div>
                         <div class="link description">
                             This is the description for the link
                         </div>
+                        <button class="link-button">
+                            Name of link
+                        </button>
                     </div>
                     <div class="section-link">
                         <i class="fa-solid fa-user"></i>
-                        <div class="link-logo">
-                            here is a logo
-                        </div>
                         <div class="link description">
                             This is the description for the link
                         </div>
+                        <button class="link-button">
+                            Name of link
+                        </button>
                     </div>
                     <div class="section-link">
                         <i class="fa-solid fa-user"></i>
-                        <div class="link-logo">
-                            here is a logo
-                        </div>
                         <div class="link description">
                             This is the description for the link
                         </div>
+                        <button class="link-button">
+                            Name of link
+                        </button>
                     </div>
                 </div>
             </div>
