Formatted second section, add icons to people section

--- a/index.html
+++ b/index.html
@@ -52,43 +52,44 @@
                     <div class="section-link">
                         <i class="fa-solid fa-user"></i>
                         <div class="link description">
-                            This is the description for the link
+                            The projects that are cureently being worked on.
                         </div>
                         <button class="link-button">
-                            Name of link
+                            See our current projects
                         </button>
                     </div>
                     <div class="section-link">
                         <i class="fa-solid fa-user"></i>
                         <div class="link description">
-                            This is the description for the link
+                            Our publically available data and learning resources
                         </div>
                         <button class="link-button">
-                            Name of link
+                            Explore our data
                         </button>
                     </div>
                     <div class="section-link">
                         <i class="fa-solid fa-user"></i>
                         <div class="link description">
-                            This is the description for the link
+                            See where our funding comes from and who is funding which projects.
                         </div>
                         <button class="link-button">
-                            Name of link
+                            Access funding partners
                         </button>
                     </div>
                 </div>
             </div>
         </section>
 
-
-        <section class="even-section">
-            <div class="even-section-content">
-                <div class="even-section-text">Upcoming events - a description of upcoming events and stuff, kind of like a slideshow with fancy pics or something
-                    This section is really just here to break upo the two sections with more worthwile info.
+        <div class="even-content-wrapper">
+            <section class="even-section">
+                <div class="even-section-content">
+                    <div class="even-section-text">Upcoming events - a description of upcoming events and stuff, kind of like a slideshow with fancy pics or something
+                        This section is really just here to break upo the two sections with more worthwile info.
+                    </div>
+                    <div class="even-section-link">This could be a button with "Find out more" on it</div>
                 </div>
-                <div class="even-section-link">This will be a button with "Find out more" on it</div>
-            </div>
-        </section>
+            </section>
+        </div>
 
 
         <section class="odd-section">
@@ -101,28 +102,31 @@
             <div class="odd-section-content">
                 <div class="section-links">
                     <div class="section-link">
-                        <div class="link-logo">
-                            here is a logo
-                        </div>
+                        <i class="fa-solid fa-user"></i>
                         <div class="link description">
                             This is the description for the link
                         </div>
+                        <button class="link-button">
+                            Name of link
+                        </button>
                     </div>
                     <div class="section-link">
-                        <div class="link-logo">
-                            here is a logo
-                        </div>
+                        <i class="fa-solid fa-user"></i>
                         <div class="link description">
                             This is the description for the link
                         </div>
+                        <button class="link-button">
+                            Name of link
+                        </button>
                     </div>
                     <div class="section-link">
-                        <div class="link-logo">
-                            here is a logo
-                        </div>
+                        <i class="fa-solid fa-user"></i>
                         <div class="link description">
                             This is the description for the link
                         </div>
+                        <button class="link-button">
+                            Name of link
+                        </button>
                     </div>
                 </div>
             </div>
