Cleaned html and css files

--- a/index.html
+++ b/index.html
@@ -37,17 +37,18 @@
         </div>
     </div>
 
-    <div class="content-wrapper">
-        <section class="odd-section">
-            <div class="odd-section-header">
-                <div class="odd-section-title">Title saying that we can help other people learn and do things</div>
-                <div class="odd-section-subtitle">
+
+    <section class="link-section">
+        <div class="content-wrapper">
+            <div class="link-section-header">
+                <div class="link-section-title">Title saying that we can help other people learn and do things</div>
+                <div class="link-section-subtitle">
                     Providing sports engineering and rehabilitation 
                     technology solutions for diverse problems that arise in the community 
                     to help individuals or research groups.
                 </div>
             </div>
-            <div class="odd-section-content">
+            <div class="link-section-content">
                 <div class="section-links">
                     <div class="section-link">
                         <i class="fa-solid fa-user"></i>
@@ -78,28 +79,30 @@
                     </div>
                 </div>
             </div>
-        </section>
-
-        <div class="even-content-wrapper">
-            <section class="even-section">
-                <div class="even-section-content">
-                    <div class="even-section-text">Upcoming events - a description of upcoming events and stuff, kind of like a slideshow with fancy pics or something
-                        This section is really just here to break upo the two sections with more worthwile info.
-                    </div>
-                    <div class="even-section-link">This could be a button with "Find out more" on it</div>
-                </div>
-            </section>
         </div>
+    </section>
 
 
-        <section class="odd-section">
-            <div class="odd-section-header">
-                <div class="odd-section-title">Something about meeting the people that are part of the team</div>
-                <div class="odd-section-subtitle">Something inspirational and jazzy about the people involved, may some photos and basic things about where they are
+    <section class="slide-section">
+        <div class="slide-section-content">
+            <div class="slide-section-text">Upcoming events - a description of upcoming events and stuff, kind of like a slideshow with fancy pics or something
+                This section is really just here to break upo the two sections with more worthwile info.
+            </div>
+            <div class="slide-section-link">This could be a button with "Find out more" on it</div>
+        </div>
+    </section>
+
+
+
+    <section class="link-section">
+        <div class="content-wrapper">
+            <div class="link-section-header">
+                <div class="link-section-title">Something about meeting the people that are part of the team</div>
+                <div class="link-section-subtitle">Something inspirational and jazzy about the people involved, may some photos and basic things about where they are
                     and what theyre associations are and maybe something about the university of canterbury?
                 </div>
             </div>
-            <div class="odd-section-content">
+            <div class="link-section-content">
                 <div class="section-links">
                     <div class="section-link">
                         <i class="fa-solid fa-user"></i>
@@ -130,8 +133,9 @@
                     </div>
                 </div>
             </div>
-        </section>
-    </div>
+        </div>
+    </section>
+
 
     <footer class="footer">
         <div class="footer-content">
