Formatted link sections as grid

--- a/index.html
+++ b/index.html
@@ -48,35 +48,33 @@
                     to help individuals or research groups.
                 </div>
             </div>
-            <div class="link-section-content">
-                <div class="section-links">
-                    <div class="section-link">
-                        <i class="fa-solid fa-user"></i>
-                        <div class="link description">
-                            The projects that are cureently being worked on.
-                        </div>
-                        <button class="link-button">
-                            See our current projects
-                        </button>
+            <div class="grid-container">
+                <div class="section-link">
+                    <i class="fa-solid fa-user"></i>
+                    <div class="link description">
+                        The projects that are currently being worked on.
                     </div>
-                    <div class="section-link">
-                        <i class="fa-solid fa-user"></i>
-                        <div class="link description">
-                            Our publically available data and learning resources
-                        </div>
-                        <button class="link-button">
-                            Explore our data
-                        </button>
+                    <button class="link-button">
+                        See our current projects
+                    </button>
+                </div>
+                <div class="section-link">
+                    <i class="fa-solid fa-user"></i>
+                    <div class="link description">
+                        Our publically available data and learning resources
                     </div>
-                    <div class="section-link">
-                        <i class="fa-solid fa-user"></i>
-                        <div class="link description">
-                            See where our funding comes from and who is funding which projects.
-                        </div>
-                        <button class="link-button">
-                            Access funding partners
-                        </button>
+                    <button class="link-button">
+                        Explore our data
+                    </button>
+                </div>
+                <div class="section-link">
+                    <i class="fa-solid fa-user"></i>
+                    <div class="link description">
+                        See where our funding comes from and who is funding which projects.
                     </div>
+                    <button class="link-button">
+                        Access funding partners
+                    </button>
                 </div>
             </div>
         </div>
