--- a/index.html
+++ b/index.html
@@ -99,35 +99,33 @@
                     and what theyre associations are and maybe something about the university of canterbury?
                 </div>
             </div>
-            <div class="link-section-content">
-                <div class="section-links">
-                    <div class="section-link">
-                        <i class="fa-solid fa-user"></i>
-                        <div class="link description">
-                            This is the description for the link
-                        </div>
-                        <button class="link-button">
-                            Name of link
-                        </button>
+            <div class="grid-container">
+                <div class="section-link">
+                    <i class="fa-solid fa-user"></i>
+                    <div class="link description">
+                        Dr. Natalia Kabaliuk. Department of Mechanical Engineering.
                     </div>
-                    <div class="section-link">
-                        <i class="fa-solid fa-user"></i>
-                        <div class="link description">
-                            This is the description for the link
-                        </div>
-                        <button class="link-button">
-                            Name of link
-                        </button>
+                    <button class="link-button">
+                        Get in touch!
+                    </button>
+                </div>
+                <div class="section-link">
+                    <i class="fa-solid fa-user"></i>
+                    <div class="link description">
+                        Prof. Nick Draper. Faculty of Health.
                     </div>
-                    <div class="section-link">
-                        <i class="fa-solid fa-user"></i>
-                        <div class="link description">
-                            This is the description for the link
-                        </div>
-                        <button class="link-button">
-                            Name of link
-                        </button>
+                    <button class="link-button">
+                        Go to profile
+                    </button>
+                </div>
+                <div class="section-link">
+                    <i class="fa-solid fa-user"></i>
+                    <div class="link description">
+                        Reverend Joe Blogs, in house minister
                     </div>
+                    <button class="link-button">
+                        Pray to jesus
+                    </button>
                 </div>
             </div>
         </div>
