Add media query to screen size
Added media query to screen size for mobile-first development. Also added the menu bars icon when screen is small. Currently unformatted

--- a/index.html
+++ b/index.html
@@ -12,19 +12,20 @@
     <div class="top-content">
         <header class="header">
             <div class="logo">SHARRC</div>
-                <ul class="nav-items">
-                    <!-- Nav items will be drop down lists NEED TO LEARN THAT -->
-                    <li>ABOUT</li>
-                    <!-- About section will contain  the people involved in the cluster and the publications-->
-                    <li>PROJECTS</li>
-                    <!-- Project will contain the specific projects and some info about each one -->
-                    <li>RESOURCES</li> 
-                    <!-- Resources will contain the facilities that are available and any open access/publically available data and useable resources -->
-                    <li>FUNDING</li>
-                    <!-- Small info about each funding partner, what they fund, and what they do. -->
-                    <li>CONTACT</li>
-                    <!-- Contact info for natalia, nick, etc. -->
-                </ul>
+            <i id="menu-bars" class="fa-solid fa-bars"></i>
+            <ul class="nav-items">
+                <!-- Nav items will be drop down lists NEED TO LEARN THAT -->
+                <li>ABOUT</li>
+                <!-- About section will contain  the people involved in the cluster and the publications-->
+                <li>PROJECTS</li>
+                <!-- Project will contain the specific projects and some info about each one -->
+                <li>RESOURCES</li> 
+                <!-- Resources will contain the facilities that are available and any open access/publically available data and useable resources -->
+                <li>FUNDING</li>
+                <!-- Small info about each funding partner, what they fund, and what they do. -->
+                <li>CONTACT</li>
+                <!-- Contact info for natalia, nick, etc. -->
+            </ul>
         </header>
 
         <div class="hero">
@@ -135,7 +136,7 @@
     <footer class="footer">
         <div class="footer-content">
             <div class="socials">
-                <div class="socials-header">Connect with us</div>
+                <div class="socials-header">Connect with us!</div>
                 <div class="socials-links">
                     <ul class="socials-hyperlinks">
                         <li>Email</li>
