--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>SHARRC</title>
 </head>
 <body>
-    <section class="top-content">
+    <div class="top-content">
         <header class="header">
             <div class="logo">SHARRC</div>
             <i id="menu-bars" class="fa-solid fa-bars"></i>
@@ -36,7 +36,7 @@
                 </div>
             </div>
         </div>
-    </section>
+    </div>
 
 
     <section class="link-section">
