Added hyperlinks to nav items

--- a/index.html
+++ b/index.html
@@ -15,15 +15,25 @@
             <i id="menu-bars" class="fa-solid fa-bars"></i>
             <ul class="nav-items">
                 <!-- Nav items will be drop down lists NEED TO LEARN THAT -->
-                <li>ABOUT</li>
+                <li>
+                    <a href="Pages/about.html">ABOUT</a>
+                </li>
                 <!-- About section will contain  the people involved in the cluster and the publications-->
-                <li>PROJECTS</li>
+                <li>
+                    <a href="Pages/about.html">PROJECTS</a>
+                </li>
                 <!-- Project will contain the specific projects and some info about each one -->
-                <li>RESOURCES</li> 
+                <li>
+                    <a href="Pages/about.html">RESOURCES</a>
+                </li> 
                 <!-- Resources will contain the facilities that are available and any open access/publically available data and useable resources -->
-                <li>FUNDING</li>
+                <li>
+                    <a href="Pages/about.html">FUNDING</a>
+                </li>
                 <!-- Small info about each funding partner, what they fund, and what they do. -->
-                <li>CONTACT</li>
+                <li>
+                    <a href="Pages/about.html">CONTACT</a>
+                </li>
                 <!-- Contact info for natalia, nick, etc. -->
             </ul>
         </header>
